--- a/Event-Booking-API/.env.example
+++ b/Event-Booking-API/.env.example
@@ -20,6 +20,7 @@ MONGO_URI=mongodb://127.0.0.1:27017/eventlogs
 
 JWT_SECRET=replace_with_a_strong_secret
 JWT_EXPIRES_IN=7d
+CORS_ORIGINS=https://your-frontend-domain.up.railway.app
 
 EMAIL_USER=your_email@gmail.com
 EMAIL_PASS=your_gmail_app_password
